--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT = 8000
 MONGODB_URL = mongodb+srv://priya:your-password@cluster0.709gqub.mongodb.net
 CORS_ORIGIN = *
+ACCESS_TOKEN_SECRET = chai-aur-code
+ACCESS_TOKEN_EXPIRY = 1d
+REFRESH_TOKEN_SECRET = chai-aur-backend
+REFRESH_TOKEN_EXPIRY = 10d
